@@ -125,7 +125,7 @@ public class LifecycleListenerRule extends Rule {
         // Instantiate a new LifecycleListener implementation object
         Class<?> clazz = Class.forName(className);
         LifecycleListener listener =
-            (LifecycleListener) clazz.newInstance();
+            (LifecycleListener) clazz.getDeclaredConstructor().newInstance();
 
         // Add this LifecycleListener to our associated component
         c.addLifecycleListener(listener);
