@@ -186,9 +186,8 @@ public class WebappServiceLoader<T> {
         for (String serviceClass : servicesFound) {
             try {
                 Class<?> clazz = Class.forName(serviceClass, true, loader);
-                services.add(serviceType.cast(clazz.newInstance()));
-            } catch (ClassNotFoundException | InstantiationException |
-                    IllegalAccessException | ClassCastException e) {
+                services.add(serviceType.cast(clazz.getDeclaredConstructor().newInstance()));
+            } catch (ReflectiveOperationException | ClassCastException e) {
                 throw new IOException(e);
             }
         }
